--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <div class="container-fluid bg-primary">
       <div class="container">
         <nav class="navbar navbar-dark navbar-expand-lg py-0">
-          <a href="main.html" class="navbar-brand">
+          <a href="index.html" class="navbar-brand">
             <h1 class="text-white fw-bold d-block">
               QGN<span class="text-secondary"></span>
             </h1>
@@ -115,7 +115,7 @@
           >
             <div class="navbar-nav ms-auto mx-xl-auto p-0">
               <a
-                href="main.html"
+                href="index.html"
                 class="nav-item nav-link active text-secondary"
                 >Home</a
               >
@@ -1305,7 +1305,7 @@
       <div class="container pt-5 pb-4">
         <div class="row g-5">
           <div class="col-lg-3 col-md-6">
-            <a href="main.html">
+            <a href="index.html">
               <h1 class="text-white fw-bold d-block">
                 QGN<span class="text-secondary"></span>
               </h1>
